--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>0RG4N1C – Cosmic Essentials</title>
-  <meta name="description" content="0RG4N1C: Cosmic-organic essentials. AI broke the world at w341th.com. We grow the fix.">
+  <meta name="description" content="0RG4N1C: Cosmic-organic essentials. AI broke the world. We grow the fix.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   <style>
