--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
       <!-- Right Playlist -->
       <div class="col-md-3 p-3">
-        <strong>PLAYLIST</strong>
+        <strong>ORDER LIST</strong>
         <div class="playlist mt-2">
           Your cart is empty.<br>
           Add items using the button.
